# autoresolve

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  approve.py  conftest.py  local-commands.txt  pyproject.toml  repomix-output.xml  sandbox.py  trigger-alert.ps1
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_report.yml
.github/workflows/: ci.yml
.opensmith/: config.json
_diagrams/: ai-orchestration-workflow.mmd  conditional-routing-architecture.mmd  demo-sequence.mmd  ingestion-gateway.mmd  mcp-integration-architecture.mmd
data/runbooks/: payment-gateway-OOM.md
diagrams/: adr-langchain-dependency-strategy.mmd  container-architecture.mmd  demo-sequence.mmd  langgraph-state-machine.mmd  repo-structure.mmd  system-context.mmd  system-integration.mmd
docs/: vision.md
docs/adrs/: 001-langchain-dependency-strategy.md  002-ai-orchestration-framework.md  003-vector-database-selection.md  004-event-broker-selection.md  005-api-framework-selection.md  006-relational-database-selection.md  007-foundation-model-provider.md  008-cicd-platform.md
docs/architecture/: 01-system-context.md  02-container-architecture.md  03-ingestion-event-flow.md  04-ai-swarm-state-machine.md  05-mcp-security-boundary.md  06-rag-hybrid-search.md  07-hitl-execution-sequence.md  08-failure_scenarios.md  08-hitl-workflow.md  09-api-security-gateway.md  10-enterprise-rag.md  12-threat_model.md  13-security-topology.md  14-security-test-harness.md  14-testing-framework.md  16-observability-architecture.md
docs/project/: repository-structure.md
docs/security/: 01-security-review.md
infra/: docker-compose.yml
infra/target-environments/: docker-compose.yml
kubernetes/base/: kustomization.yaml
kubernetes/helm/autoresolve/: values.yaml
mcp-servers/filesystem-mcp/: fs_server.py  pyproject.toml
mcp-servers/github-mcp/: github_server.py  pyproject.toml
mcp-servers/grafana-mcp/: grafana_server.py
mcp-servers/kubernetes-mcp/: k8s_server.py  pyproject.toml
mcp-servers/prometheus-mcp/: prom_server.py  pyproject.toml
mcp-servers/slack-mcp/: slack_server.py
mcp-servers/terraform-mcp/: tf_server.py
prompts/: 01-project-initiation.txt  ph-8.5-audit.txt
scripts/: bootstrap.sh  incident_workflow.py
src/agents/: approve.py  graph.py  llm_wrapper.py  nodes.py  pyproject.toml  schemas.py  state.py  worker.py
src/agents/nodes/: __init__.py  execution.py  review.py
src/api/: auth.py  main.py  producer.py  pyproject.toml  rate_limit.py  schemas.py
src/core/: config.py  llm.py  mcp_client.py  observability.py
src/core/interfaces/: trace.py
src/core/mcp_base/: server.py
src/core/security/: audit.py  authorization.py  pii_scrubber.py
src/production/: prod_resilience.py
src/rag/: pipeline.py  reranker.py  schemas.py  vector_store.py
terraform/environments/dev/: main.tf
tests/: test_repo_structure.py
tests/agents/: test_workflow.py
tests/api/: test_security.py
tests/chaos/: test_resilience.py
tests/core/: test_observability.py
tests/eval/: golden_dataset.json
tests/infra/: test_docker_and_helm.py
tests/integration/: test_env_validation.py  test_mcp.py
tests/load/: locustfile.py
tests/production/: test_prod_resilience.py  test_realtime_integration.py
tests/rag/: test_advanced_rag.py
tests/security/: test_security_compliance.py
tests/unit/: test_api.py  test_config.py  test_detailed_design.py  test_graph.py  test_security.py
