[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E = standard errors, F = pyflakes (unused variables), I = isort (import sorting)
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
follow_imports = "skip"
disable_error_code = ["misc", "untyped-decorator", "attr-defined", "no-untyped-def"]
explicit_package_bases = true
mypy_path = ["src", "mcp-servers"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[project]
name = "autoresolve"
version = "0.1.0"
description = ""
authors = [
    {name = "Krishna Kant",email = "kantkrishna@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "aiokafka (>=0.14.0,<0.15.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "litellm (>=1.91.2,<2.0.0)",
    "langchain-litellm (>=0.7.0,<0.8.0)",
    "langgraph (>=1.2.9,<2.0.0)",
    "langchain-core (>=1.4.9,<2.0.0)",
    "opensmith (>=0.1.5,<0.2.0)",
    "mcp (>=1.28.1,<2.0.0)",
    "kubernetes (>=36.0.2,<37.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "qdrant-client (>=1.18.0,<2.0.0)",
    "fastembed (>=0.8.0,<0.9.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langgraph-checkpoint-postgres (>=3.1.0,<4.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "pygithub (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=2.2.0,<3.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.21,<0.16.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "strict"
filterwarnings = [
    "ignore:.*langchain_community.*",
    "ignore:.*starlette.testclient.*"
]