[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-mcp-server"
version = "0.1.0"
description = "GitHub PR Automation MCP Server for AutoResolve"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.1.0",       # Official Model Context Protocol Server SDK
    "PyGithub>=2.1.1",  # Official GitHub API Client
    "cryptography>=41.0.3" # Required for securely authenticating via GitHub Apps (JWTs)
]