[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresolve-api"
version = "0.1.0"
description = "FastAPI Webhook Gateway for AutoResolve"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.3.0",
    "prometheus-client>=0.17.1"
]